tests/transpiler/x/cpp/outer_join.error
compile: exit status 1
/workspace/mochi/tests/transpiler/x/cpp/outer_join.cpp: In function ‘int main()’:
/workspace/mochi/tests/transpiler/x/cpp/outer_join.cpp:99:40: error: ‘class std::optional<OrdersItem>’ has no member named ‘id’
   99 |                 std::cout << row.order.id;
      |                                        ^~
/workspace/mochi/tests/transpiler/x/cpp/outer_join.cpp:103:43: error: ‘class std::optional<CustomersItem>’ has no member named ‘name’
  103 |                 std::cout << row.customer.name;
      |                                           ^~~~
/workspace/mochi/tests/transpiler/x/cpp/outer_join.cpp:107:40: error: ‘class std::optional<OrdersItem>’ has no member named ‘total’
  107 |                 std::cout << row.order.total;
      |                                        ^~~~~
/workspace/mochi/tests/transpiler/x/cpp/outer_join.cpp:112:40: error: ‘class std::optional<OrdersItem>’ has no member named ‘id’
  112 |                 std::cout << row.order.id;
      |                                        ^~
/workspace/mochi/tests/transpiler/x/cpp/outer_join.cpp:120:40: error: ‘class std::optional<OrdersItem>’ has no member named ‘total’
  120 |                 std::cout << row.order.total;
      |                                        ^~~~~
/workspace/mochi/tests/transpiler/x/cpp/outer_join.cpp:126:39: error: ‘class std::optional<CustomersItem>’ has no member named ‘name’
  126 |             std::cout << row.customer.name;
      |                                       ^~~~
